--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@ framework = arduino
 
 
 lib_deps = 
+    arduino
     Wire
     adafruit/Adafruit GPS Library@^1.7.5
     MPU6050
-    https://github.com/elefthvp/PitotTube.git
