--- a/platformio.ini
+++ b/platformio.ini
@@ -8,15 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
-platform = espressif32
-board = esp32dev
+[env:teensy41]
+platform = teensy
+board = teensy41
 framework = arduino
-
-
+monitor_speed = 9600
+build_flags = -D USB_SERIAL
 lib_deps = 
     arduino
     Wire
     adafruit/Adafruit GPS Library@^1.7.5
     https://github.com/adafruit/Adafruit_BMP3XX
-    MPU6050
+    https://github.com/sparkfun/SparkFun_ICM-20948_ArduinoLibrary.git
