Implemented the Sensors Class that handles the redundant sensors and averages their values

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,11 +8,27 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+
+
+[env:esp32]
+platform = espressif32
+framework = arduino
+board = esp32dev
+lib_deps = 
+    arduino
+    Wire
+    adafruit/Adafruit GPS Library@^1.7.5
+    https://github.com/adafruit/Adafruit_BMP3XX
+    https://github.com/sparkfun/SparkFun_ICM-20948_ArduinoLibrary.git
+     
+
+
+
 [env:teensy41]
 platform = teensy
-board = teensy41
 framework = arduino
-monitor_speed = 9600
+board = teensy41
+upload_protocol = teensy-cli
 build_flags = -D USB_SERIAL
 lib_deps = 
     arduino
