Co-authored-by: Alex-Tsolakos <Alex-Tsolakos@users.noreply.github.com> The servo code work for esp32 now will change it for teensy4.1 the imu code has promblems the implemnetation is not completed.

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,7 +19,9 @@ lib_deps =
     Wire
     adafruit/Adafruit GPS Library@^1.7.5
     https://github.com/adafruit/Adafruit_BMP3XX
-    https://github.com/sparkfun/SparkFun_ICM-20948_ArduinoLibrary.git
+    adafruit/DHT sensor library@^1.4.3
+    adafruit/Adafruit Unified Sensor@^1.1.9
+    madhephaestus/ESP32Servo@^3.0.6
      
 
 
@@ -35,4 +37,6 @@ lib_deps =
     Wire
     adafruit/Adafruit GPS Library@^1.7.5
     https://github.com/adafruit/Adafruit_BMP3XX
-    https://github.com/sparkfun/SparkFun_ICM-20948_ArduinoLibrary.git
+    adafruit/DHT sensor library@^1.4.3
+    adafruit/Adafruit Unified Sensor@^1.1.9
+    
