--- a/platformio.ini
+++ b/platformio.ini
@@ -22,6 +22,7 @@ lib_deps =
     adafruit/DHT sensor library@^1.4.3
     adafruit/Adafruit Unified Sensor@^1.1.9
     madhephaestus/ESP32Servo@^3.0.6
+    adafruit/Adafruit AHRS @ ^2.3.6
      
 
 
@@ -39,4 +40,5 @@ lib_deps =
     https://github.com/adafruit/Adafruit_BMP3XX
     adafruit/DHT sensor library@^1.4.3
     adafruit/Adafruit Unified Sensor@^1.1.9
+    adafruit/Adafruit AHRS @ ^2.3.6
     
